[package]
name = "binyars"
version = "0.1.0"
edition = "2024"

[dependencies]
yara-x = "1.7.1"
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev"}
# Locates binaryninjacore on your system.
binaryninjacore-sys = { git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev"}
log = "0.4.27"
thread = "0.0.1"
bincode = "2.0.1"
walkdir = "2.5.0"
serde = { version="1.0.219" , features=["derive"]}
serde_json = "1.0.142"
custom_error = "1.9.2"
open = "5"  
anyhow = "1.0.99"
tracing = "0.1.41"
rayon = "1.11.0"
tempfile = "3.23.0"
string-builder = "0.2.0"
regex = "1.11.3"
yara-x-fmt = "1.7.1"
jaq-core = "2.2.1"
jaq-interpret = "1.5.0"
jaq-parse = "1.0.3"
futures = "0.3.31"
tokio = { version ="1.48.0", features = ["full"] }

[lib]
crate-type = ["cdylib"]
